--- a/style.css
+++ b/style.css
@@ -380,3 +380,44 @@ nav a {
 .buttons-calculadora button:nth-child(2){
     margin-left: 40px;
 }
+
+.container-plano-alimentacao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.plano-alimentacao td{
+    width: 200px;
+    font-size: 18px;
+}
+
+.plano-alimentacao table {
+    margin-top: 50px;
+}
+
+.card-plano-alimentacao {
+    width: 1200px;
+    height: 450px;
+    background-color: #5ECB79;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-plano-alimentacao table {
+    border-collapse: collapse;
+}
+
+.card-plano-alimentacao td {
+    color: #fff;
+    font-size: 20px;
+    border-bottom: 2px solid;
+    padding: 10px;
+    
+}
+
+.card-plano-alimentacao td:nth-child(1) {
+    text-align: left;
+}
