--- a/style.css
+++ b/style.css
@@ -420,3 +420,25 @@ nav a {
     text-align: left;
     padding-right: 25px;
 }
+
+#pagamentos {
+    display: flex;
+    justify-content: center;
+}
+
+.container-pagamentos {
+    width: 1200px;
+    display: flex;
+}
+
+.container-pagamentos form {
+    display: flex;
+    flex-direction: column;
+}
+
+.container-pagamentos form input{
+    width: 1100px;
+    height: 40px;
+    padding: 10px;
+    font-size: 16px;
+}
