--- a/style.css
+++ b/style.css
@@ -32,8 +32,14 @@ nav ul {
 nav a {
     color: #000;
     margin-left: 20px;
-    font-size: 16px;
+    font-size: 17px;
     font-weight: 600;
+}
+
+nav a img {
+    margin-top: 2px;
+    width: 23px;
+    margin-left: 20px;
 }
 
 .logo {
@@ -83,7 +89,7 @@ nav a {
 
 .box-image {
     width: 360px;
-    height: 220px;
+    height: auto; 
     margin: 10px;
 }
 
@@ -131,13 +137,17 @@ nav a {
 }
 
 .text-membro h1 {
-    font-size: 45px;
+    font-size: 50px;
     padding: 10px;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 .text-membro p {
-    width: 500px;
-    font-size: 17px;
+    font-size: 17.5px;
+    text-align: center;
+    width: 580px;
+    letter-spacing: 1.5;
 }
 
 #compra {
@@ -166,6 +176,8 @@ nav a {
     text-align: center;
     margin-bottom: 50px;
     font-size: 35px;
+    text-transform: uppercase;
+    font-size: 27px;
 }
 
 .box table {
@@ -264,7 +276,7 @@ nav a {
     border: 1px solid #ccc;
     border-radius: 5px;
     height: 45px;
-    width: 400px;
+    width: 450px;
 }
 
 #user {
@@ -290,7 +302,7 @@ nav a {
 
 .buttom-form button {
     color: #fff;
-    width: 400px;
+    width: 450px;
     background-color: #a4e4b4;
     font-weight: 700;
     border: 2px solid #a4e4b4;
@@ -321,7 +333,6 @@ nav a {
     background-color: #ccc;
     box-shadow: 2px 2px 10px 2px #888;
     width: 600px;
-    height: 550px;
     display: flex;
     justify-content: center;
     border-radius: 20px;
@@ -375,6 +386,7 @@ nav a {
     height: 45px;
     font-size: 16px;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .buttons-calculadora button:nth-child(2){
@@ -388,11 +400,18 @@ nav a {
     margin-top: 50px;
 }
 
+.text-plano-alimentacao, .text-lista-compras,.text-suplementos {
+    text-align: center;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    font-size: 28px;
+}
+
 .plano-alimentacao td{
     width: 200px;
     font-size: 18px;
     text-align: left;
-}    
+}   
 
 .card-plano-alimentacao {
     width: 1200px;
@@ -421,9 +440,17 @@ nav a {
     padding-right: 25px;
 }
 
-#pagamentos {
+.pagamentos {
     display: flex;
     justify-content: center;
+}
+
+.header-pagamentos {
+    display: flex;
+    justify-content: center;
+    background: none;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .container-pagamentos {
@@ -436,9 +463,242 @@ nav a {
     flex-direction: column;
 }
 
-.container-pagamentos form input{
+.container-pagamentos label {
+    margin-top: 40px;
+    margin-bottom: 8px;
+    font-size: 18px;
+}
+
+.container-pagamentos form input, select{
     width: 1100px;
-    height: 40px;
+    height: 50px;
     padding: 10px;
-    font-size: 16px;
+    font-size: 16.5px;
+    border-radius: 5px;
+    border: 1px solid #000;
+}
+
+.logo-pagamentos {
+    display: flex;
+}
+
+.logo-pagamentos img {
+    width: 90px;
+    margin-right: 30px;
+}
+
+.area-info-pagamento{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.desc-pagamentos {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.valor-pagamentos {
+    margin-top: 5px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.container-forma-pagamento {
+    width: 1100px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.box-forma-pagamento {
+    width: 990px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.forma-pagamento {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.forma-pagamento a {
+    color: #000;
+    margin-left: 67px;
+    border: 1px solid #000;
+    padding: 31px;
+    width: 231px; 
+    text-align: center;
+    font-size: 18px;
+    border-radius: 5px;
+}
+
+#pg {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.hidden {
+    display: none;
+}
+
+.campos-cartao {
+    display: flex;
+    flex-direction: column;
+}
+
+#pix-section {
+    margin-top: 50px;
+    text-align: center;
+    width: 1100px;
+}
+
+#pix-section h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.compra-final {
+    margin-top: 50px;
+}
+
+.container-compra-final {
+    display: flex;
+    justify-content: space-between;
+    width: 1100px;
+    margin-top: 20px;
+}
+
+hr {
+    margin-top: 10px;
+    border: 1px solid #000;
+}
+
+.detalhes-compra, .valor {
+    font-size: 19px;
+}
+
+.botao-compra {
+    display: flex;
+    justify-content: center;
+    width: 1100px;
+    background-color: #5ECB79;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.botao-compra a {
+    color: #fff;
+    padding: 15px;
+    font-weight: 700;
+    border-radius: 5px;
+    font-size: 17px;
+    letter-spacing: 1px;
+}
+
+.botao-compra:hover {
+    background-color: #307f44;
+    cursor: pointer;
+}
+
+.total, .valor-total {
+    font-size: 19px;
+    font-weight: 700;
+} 
+
+.container-lista-compras {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.lista-compras td{
+    width: 200px;
+    font-size: 19px;
+    text-align: justify;
+}   
+
+.lista-compras td:nth-child(1) {
+    text-align: left;
+}
+.lista-compras td:nth-child(4) {
+    text-align: center;
+}
+
+.lista-compras input{
+    width: 17px;
+    height: 17px;
+}
+
+.lista-compras table {
+    width: 1100px;
+}
+
+.card-lista-compras table {
+    background-color: #5ECB79;
+    border-radius: 15px;
+    width: 1100px;
+}
+
+.card-lista-compras td{
+    padding: 18px;
+    border-bottom: 2px solid #fff;
+    color: #fff;
+    font-size: 18.5px;
+}
+
+.lista-compras table,td {
+    border-collapse: collapse;
+}
+
+
+.container-suplementos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.suplementos td{
+    width: 200px;
+    font-size: 19px;
+    text-align: left;
+}   
+
+.suplementos td:nth-child(1) {
+    text-align: left;
+}
+.suplementos td:nth-child(4) {
+    text-align: center;
+}
+
+.suplementos input{
+    width: 17px;
+    height: 17px;
+}
+
+.suplementos table {
+    width: 1100px;
+}
+
+.card-suplementos table {
+    background-color: #5ECB79;
+    border-radius: 15px;
+    width: 1100px;
+}
+
+.card-suplementos td{
+    padding: 15px;
+    border-bottom: 2px solid #fff;
+    color: #fff;
+    font-size: 18px;
+
+}
+
+.suplementos table,td {
+    border-collapse: collapse;
 }
